--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,308 @@
-/* место для вашего кода */
+body {
+  font-weight: 400;
+  background-color: rgb(255,255,255);
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 92px 50px 96px 50px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  min-height: 22px;
+  list-style: circle;
+}
+
+.header__link {
+  border-bottom: 1px solid black;
+  color: rgb(0,0,0);
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none; 
+}
+
+.header__link_active {
+  border-bottom: 0;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  min-height: 98px;
+  color: rgb(0,0,0);
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.35;
+}
+
+.header__address {
+  justify-self: end;
+  max-width: 240px;
+}
+
+.phone__number {
+  border-bottom: 1px solid black;
+}
+
+.email {
+  border-bottom: 1px solid black;
+}
+
+.cover {
+  position: relative;
+  z-index: -2;
+  margin-bottom: 180px;
+  padding: 165px 50px 50px 50px;
+  color: rgb(255,255,255);
+  text-transform: uppercase;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  top:0;
+  left:0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0,0,0,0.6);
+}
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 106px;
+}
+
+.aligned-text {
+  display: block;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 1.15;
+  letter-spacing: 0.3em;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  gap: 107px;
+}
+
+.cover__description-text {
+  align-self: center;
+  font-size: 22px;
+  line-height: 28px;
+  word-spacing: 18.5px;
+}
+
+.bet-button {
+  border: 1px solid rgb(255, 255, 255);
+  padding: 12px 32px 11px 31px;
+  color: inherit;
+  font-family: Raleway, sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  text-transform: uppercase;
+  background: transparent;
+  appearance: none;
+}
+
+.lots {
+  margin: 0 24px;
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+}
+
+.lots__heading {
+  margin-bottom: 27px;
+  margin-left: 40px;
+  color: rgb(0,0,0);
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link {
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  z-index: -2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 48px 40px;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+}
+
+.card__title {
+  font-weight: 700;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  font-size: 20px;
+}
+
+.lots__look-more-link {
+  display: block;
+  width: 192px;
+  margin-top: 30px;
+  margin-left: 40px;
+  border-bottom: 1px solid black;
+  color: rgb(0,0,0);
+  font-size: 20px;
+  line-height: 1.15;
+}
+
+.about {
+  margin: 120px 24px 180px 24px;
+  padding-top: 35px;
+  color: rgb(0,0,0);
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  justify-items: center;
+  gap: 25px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  background-color: rgb(0,0,0);
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  margin-top: 101px;
+  margin-bottom: 100px;
+  font-size: 40px;
+  line-height: 1.175;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 24px;
+  max-width: 688px;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  height: 180px;
+  color: rgb(0,0,0);
+  font-size: 18px;
+}
+
+.footer__address {
+  justify-self: center;
+  max-width: 264.57px;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  line-height: 21px;
+  list-style: none;
+}
+
+.footer__menu-link {
+  border-bottom: 1px solid black;
+}
+
+.footer__menu-link_active {
+  border-bottom: 0;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  margin-right: 50px;
+  list-style: none;
+}
+
+.footer__social-link {
+  display: block;
+  width: 48px;
+  height: 48px;
+}
