--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,3 @@
-body {
-  font-weight: 400;
-  background-color: rgb(255,255,255);
-}
-
-a {
-  text-decoration: none;
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -17,7 +8,6 @@ a {
 .header__links-list {
   display: flex;
   gap: 32px;
-  min-height: 22px;
   list-style: circle;
 }
 
@@ -26,6 +16,7 @@ a {
   color: rgb(0,0,0);
   font-size: 18px;
   line-height: 21px;
+  text-decoration: none;
 }
 
 .header__links-list-item_no-bullit {
@@ -45,7 +36,6 @@ a {
 .address {
   display: flex;
   flex-direction: column;
-  min-height: 98px;
   color: rgb(0,0,0);
   font-size: 18px;
   font-style: normal;
@@ -57,22 +47,20 @@ a {
   max-width: 240px;
 }
 
-.phone__number {
+.contacs {
   border-bottom: 1px solid black;
-}
-
-.email {
-  border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .cover {
   position: relative;
-  z-index: -2;
+  z-index: 0;
   margin-bottom: 180px;
   padding: 165px 50px 50px 50px;
   color: rgb(255,255,255);
   text-transform: uppercase;
   background-image: url(../images/cover.jpg);
+  background-position: center;
   background-size: cover;
 }
 
@@ -80,13 +68,15 @@ a {
   position: absolute;
   top:0;
   left:0;
-  z-index: -1;
+  z-index: 1;
   width: 100%;
   height: 100%;
   background-color: rgb(0,0,0,0.6);
 }
 
 .cover__title {
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -94,6 +84,7 @@ a {
 }
 
 .aligned-text {
+  position: relative;
   display: block;
   font-weight: 700;
   font-size: 100px;
@@ -114,6 +105,8 @@ a {
 }
 
 .cover__description {
+  position: relative;
+  z-index: 2;
   display: flex;
   gap: 107px;
 }
@@ -135,6 +128,7 @@ a {
   line-height: 26px;
   text-transform: uppercase;
   background: transparent;
+  cursor: pointer;
   appearance: none;
 }
 
@@ -172,30 +166,30 @@ a {
 
 .card {
   position: relative;
-  z-index: -2;
+  z-index: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   padding: 48px 40px;
+  background-size: cover;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
 }
 
 .card__title {
+  position: relative;
+  z-index: 2;
   font-weight: 700;
   font-size: 22px;
   text-decoration: underline;
@@ -203,18 +197,20 @@ a {
 }
 
 .card__text {
+  position: relative;
+  z-index: 2;
   font-size: 20px;
 }
 
 .lots__look-more-link {
-  display: block;
-  width: 192px;
+  display: inline-block;
   margin-top: 30px;
   margin-left: 40px;
   border-bottom: 1px solid black;
   color: rgb(0,0,0);
   font-size: 20px;
   line-height: 1.15;
+  text-decoration: none;
 }
 
 .about {
@@ -267,7 +263,7 @@ a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
-  height: 180px;
+  padding-bottom: 82px;
   color: rgb(0,0,0);
   font-size: 18px;
 }
@@ -287,6 +283,7 @@ a {
 
 .footer__menu-link {
   border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .footer__menu-link_active {
